rev 577-578 (2019-02-22) (krueschan)
- added Dockerfile and documentation for dockerized install of cerc-web

rev 574-576 (2019-02-21) (krueschan)
- installing guzzle via composer after all
- minor bug fixes

rev 570-573 (2019-02-20) (krueschan)
- fixed undefined index and variable warnings in gdrs_country_report and pledge database manager
- removed old GDRs reference and static css link from calc.js
- replaced deprecated mysql_* methods in pledge functions and pledge db manager

rev 565-569 (2019-02-16) (krueschan)
- serialize/unserialize database name for cookie storage
- replaced PEAR HTTP_Request with guzzle HTTP client lib in db manager
- replaced PEAR HTTP_Request with guzzle HTTP client lib to get pledges
- sanitize GET/POST parameters in API
- replaced PEAR HTTP_Request with guzzle HTTP client library in API example code

rev 560-564 (2019-02-15) (krueschan)
- updated baseline description in chart key
- removed obsolete experimental code (greenband)
- fixed LULUCF exclusion in index.php sidebar
- minor changes to paper bibliography
- fixed typo bug from rev 559

rev 559 (2019-02-12) (krueschan)
- created new 'EmptyFramework' class which is an extension of the abstract 'Framework' class without actually extending anything. this is so the methods of the abstract class can be accessed through initiated instances of the class without having to chose a specific framework (e.g. 'GreenhouseDevRights')
- changed several static public functions in abstract class 'Framework' to be non-static (specifically, those that are called both statically and non-statically, depending on whether they are called through the abstract class or through an instance thereof)
- throughout the code, changed static calls of several methods of class 'Framework' to become non-static calls of instances of class 'EmptyFramework'
- fixed bug where the cookie of the popup notice code could not be set since it was included in index.php after the header was already sent